test_regress/t/t_property_unsup.out
%Error-UNSUPPORTED: t/t_property_unsup.v:65:41: Unsupported: eventually[] (in property expression)
   65 |   assert property (counter == 1 implies eventually[1: 2] counter == 3);
      |                                         ^~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_unsup.v:80:20: Unsupported: eventually[] (in property expression)
   80 |   assert property (eventually[0: 2] counter == 3);
      |                    ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:90:21: Unsupported: always (in property expression)
   90 |   assert property ((always a) implies (always a));
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:90:40: Unsupported: always (in property expression)
   90 |   assert property ((always a) implies (always a));
      |                                        ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:92:26: Unsupported: always (in property expression)
   92 |   assert property ((a or(always b)) implies (a or(always b)));
      |                          ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:92:51: Unsupported: always (in property expression)
   92 |   assert property ((a or(always b)) implies (a or(always b)));
      |                                                   ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:94:21: Unsupported: eventually[] (in property expression)
   94 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:94:50: Unsupported: eventually[] (in property expression)
   94 |   assert property ((eventually[0: 1] a) implies (eventually[0: 1] a));
      |                                                  ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:96:21: Unsupported: s_eventually (in property expression)
   96 |   assert property ((s_eventually a) implies (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:96:46: Unsupported: s_eventually (in property expression)
   96 |   assert property ((s_eventually a) implies (s_eventually a));
      |                                              ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:116:21: Unsupported: always (in property expression)
  116 |   assert property ((always a) iff (always a));
      |                     ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:116:36: Unsupported: always (in property expression)
  116 |   assert property ((always a) iff (always a));
      |                                    ^~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:118:21: Unsupported: eventually[] (in property expression)
  118 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                     ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:118:46: Unsupported: eventually[] (in property expression)
  118 |   assert property ((eventually[0: 1] a) iff (eventually[0: 1] a));
      |                                              ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:120:21: Unsupported: s_eventually (in property expression)
  120 |   assert property ((s_eventually a) iff (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_property_unsup.v:120:42: Unsupported: s_eventually (in property expression)
  120 |   assert property ((s_eventually a) iff (s_eventually a));
      |                                          ^~~~~~~~~~~~
%Error: Exiting due to
